Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Changes for xxx [2005-xx-xx] (current subversion)
=================================================

 o #13322 finalized dispatcherActive property (#13300)
   Now it works on reconnect as well

 o #13319 Changed SOCKET timeout behaviour (Java/C/C++ clients)
   Changed to throw COMMUNICATION_TIMEOUT instead of RESOURCE_EXHAUST
   when the method call with SOCKET blocks after the specified timeout.
   Like that the not delivered message is queued by default,
   before the exeception was thrown back to the client code.

 o #13316 Bugfix FilePoller
   Fixed session timeout after one day
   Fixed deadlock on xmlBlaster shutdown if FilePoller had problems

 o #13310 Bugfix cluster
   ClusterNode.getConnectionState() did not reliable tell the truth
   Thanks to Michael Lum

 o #13308 and #13313 and #13314 C++ client library
   Added client side persistence code for subscribe() (deserialize is not finished)
   Added client side queueing for subscribe(), currently RAM based only
   Moved priority handling to QosData.cpp

 o #13300 Added dispatcherActive property to ConnectQos to support
   inhibiting callbacks on login, see
   http://www.xmlblaster.org/xmlBlaster/doc/requirements/interface.connect.html#dispatcherActive
   http://www.xmlblaster.org/xmlBlaster/doc/requirements/interface.connect.html#dispatcherActiveExample

 o #13299 C++ client library
   Fixed to send command line callback address property settings with ConnectQos

 o #13295 Added new server methods for administrative access:
    getServerTimestampMillis(): Access current server time in milli seconds
    getServerTimestamp(): Access current server time, e.g. "2005-03-21 11:18:12.622"

 o #13280 Removed outdated SOAP protocol plugins

Changes for 1.0.2 [2005-02-24] #13271 "Xmas release patch 2"
============================================================
